--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>NEWS</title>
+		<title>CONTACT</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -63,7 +63,7 @@
 									<label for="message">Message*</label>
 									<textarea name="message" id="" cols="30" rows="10" required placeholder="Message*"></textarea>
 									
-									<input type="hidden" name="redirect" value="https://charlenecottleworldfoundation.netlify.app/form_success">
+									<input type="hidden" name="redirect" value="https://charlenecottle.netlify.app/form_success.html">
 									<button>
 									SUBMIT
 									</button>
