fixed form link

--- a/form_success.html
+++ b/form_success.html
@@ -71,7 +71,7 @@ font-weight:bold;
             <p>Thank you!</p>
             <p>The form has been submitted successfully.We will get in contact with you soon</p>
             
-            <p>Click <a href="hhttps://charlenecottle.netlify.app/">HERE</a> to back to <span>charlenecottleworldfoundation.com</span>
+            <p>Click <a href="https://charlenecottle.netlify.app/">HERE</a> to back to <span>charlenecottleworldfoundation.com</span>
             </p>
             
 
