--- a/contact.html
+++ b/contact.html
@@ -97,18 +97,18 @@
 
 					
 							<!-- Section -->
-								<section>
-									<header class="major">
-										<h2>Get in touch</h2>
-									</header>
-									<p>See our contact information below and we will get back to you as soon as possible</p>
-									<ul class="contact">
-										<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
-										<li class="icon solid fa-phone">(000) 000-0000</li>
-										<li class="icon solid fa-home">1234 Somewhere Road #8254<br />
-										Ontario, XXX-XXX</li>
-									</ul>
-								</section>
+							<section>
+								<header class="major">
+									<h2>Get in touch</h2>
+								</header>
+						
+								<ul class="contact">
+									<li class="icon solid fa-envelope">information@untitled.tld</li>
+									<li class="icon solid fa-phone">(000) 000-0000</li>
+									<li class="icon solid fa-home">1234 Somewhere Road #8254<br />
+									Ontario, XXX-XXX</li>
+								</ul>
+							</section>
 
 							<!-- Footer -->
 							<footer id="footer">
