--- a/index.html
+++ b/index.html
@@ -188,8 +188,9 @@
 							<!-- Menu -->
 								<nav id="menu">
 									<header class="major">
-										<h2>Menu</h2>
+										<h2>Menu <span>X</span></h2>
 									</header>
+									
 									<ul>
 										<li><a href="index.html">HOME</a></li>
 										<li><a href="about.html">ABOUT</a></li>
