--- a/about.html
+++ b/about.html
@@ -60,7 +60,8 @@
 							<!-- Menu -->
 							<nav id="menu">
 								<header class="major">
-									<h2>Menu</h2>
+									<h2>Menu<span>X</span> </h2>
+									
 								</header>
 								<ul>
 									<li><a href="index.html">HOME</a></li>
