Added reveal on scroll

--- a/support.html
+++ b/support.html
@@ -76,20 +76,20 @@
 										</article>
 
 										<article>
-											<span class="icon solid fa-user"></span>
+											<span class="icon solid fa-user reveal"></span>
 											<div class="content">
-												<h3>IN PERSON</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+												<h3 class="reveal">IN PERSON</h3>
+												<p  class="reveal">Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 											</div>
 										</article>
 
 										<article>
 
-											<span class="icon solid fa-phone"></span>
+											<span class="icon solid fa-phone reveal"></span>
 											<div class="content">
-												<h3>PHONE</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											<p>xxxx-xxxx</p>
+												<h3  class="reveal">PHONE</h3>
+												<p  class="reveal">Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+											<p  class="reveal">xxxx-xxxx</p>
 											</div>
 										</article>
 
