changed icons on suppport.html

--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
 									<textarea class="reveal" name="message" id="" cols="30" rows="10" required placeholder="Message*"></textarea>
 									
 									<input type="hidden" name="redirect" value="https://charlenecottle.netlify.app/form_success.html">
-									<button class="reveal">
+									<button>
 									SUBMIT
 									</button>
 						
